# dsolver-pool-risk-monitoring

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example  docker-compose.monitoring.yml
.github/workflows/: ci.yml
migrations/: 001_create_tables.sql  002_drop_gas_in_sell.sql  003_create_view_pool_risk.sql  004_idx_pool_result_expressions.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: tycho-risk-monitor.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: dump_tables.sh  query_to_csv.py  run_query_to_csv.sh
sql-scripts/: calc-high-risk-level.sql  calc-total-risk-levels-per-hour.sql  calc-total-risk-levels.sql  list-status-per-pool.sql  reset-database.sql  view-pool-risk.sql
src/: alerts.rs  api.rs  client.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs  models.rs
tests/: integration_test.rs
