[package]
name = "dsolver-pool-risk-monitoring"
version = "0.2.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
dotenvy = "0.15"

# REST API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Prometheus metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
